# research-pulse

./: .gitignore  LICENSE  README.md  pyproject.toml
src/research_pulse/: config.py
src/research_pulse/indexing/: embedder.py  pipeline.py  store.py
src/research_pulse/ingestion/: chunk_store.py  chunker.py  loader.py  pipeline.py
src/research_pulse/retrieval/: retriever.py
tests/: conftest.py  test_indexing.py  test_ingestion.py
