[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "research-pulse"
version = "0.1.0"
description = "Production-grade RAG API service for semantic search over academic literature"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.24.0",
    "langchain-text-splitters>=0.2.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "flashrank>=0.2.0",
    "ollama>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.2.0",
    "prometheus-client>=0.20.0",
    "ragas>=0.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]